@@ -26,7 +26,7 @@
 
 package hudson.model;
 
-import static javax.servlet.http.HttpServletResponse.SC_BAD_REQUEST;
+import static jakarta.servlet.http.HttpServletResponse.SC_BAD_REQUEST;
 
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
@@ -41,9 +41,10 @@ import hudson.cli.declarative.CLIResolver;
 import hudson.console.AnnotatedLargeText;
 import hudson.init.Initializer;
 import hudson.model.Descriptor.FormException;
-import hudson.model.Queue.FlyweightTask;
 import hudson.model.labels.LabelAtom;
 import hudson.model.queue.WorkUnit;
+import hudson.node_monitors.AbstractDiskSpaceMonitor;
+import hudson.node_monitors.DiskSpaceMonitorNodeProperty;
 import hudson.node_monitors.NodeMonitor;
 import hudson.remoting.Channel;
 import hudson.remoting.VirtualChannel;
@@ -61,6 +62,7 @@ import hudson.slaves.OfflineCause.ByCLI;
 import hudson.slaves.RetentionStrategy;
 import hudson.slaves.WorkspaceList;
 import hudson.triggers.SafeTimerTask;
+import hudson.util.ClassLoaderSanityThreadFactory;
 import hudson.util.DaemonThreadFactory;
 import hudson.util.EditDistance;
 import hudson.util.ExceptionCatchingThreadFactory;
@@ -70,6 +72,7 @@ import hudson.util.NamingThreadFactory;
 import hudson.util.RemotingDiagnostics;
 import hudson.util.RemotingDiagnostics.HeapDump;
 import hudson.util.RunList;
+import jakarta.servlet.ServletException;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
@@ -88,6 +91,7 @@ import java.util.Date;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -101,7 +105,9 @@ import java.util.logging.LogRecord;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import javax.servlet.ServletException;
+import jenkins.model.DisplayExecutor;
+import jenkins.model.IComputer;
+import jenkins.model.IDisplayExecutor;
 import jenkins.model.Jenkins;
 import jenkins.security.ImpersonatingExecutorService;
 import jenkins.security.MasterToSlaveCallable;
@@ -110,10 +116,8 @@ import jenkins.util.ContextResettingExecutorService;
 import jenkins.util.ErrorLoggingExecutorService;
 import jenkins.util.Listeners;
 import jenkins.util.SystemProperties;
+import jenkins.widgets.HasWidgets;
 import net.jcip.annotations.GuardedBy;
-import org.apache.commons.lang.StringUtils;
-import org.jenkins.ui.icon.Icon;
-import org.jenkins.ui.icon.IconSet;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
@@ -125,8 +129,8 @@ import org.kohsuke.stapler.HttpResponses;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.Stapler;
 import org.kohsuke.stapler.StaplerProxy;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.StaplerRequest2;
+import org.kohsuke.stapler.StaplerResponse2;
 import org.kohsuke.stapler.WebMethod;
 import org.kohsuke.stapler.export.Exported;
 import org.kohsuke.stapler.export.ExportedBean;
@@ -146,7 +150,7 @@ import org.kohsuke.stapler.verb.POST;
  * if a {@link Node} is configured (probably temporarily) with 0 executors,
  * you won't have a {@link Computer} object for it (except for the built-in node,
  * which always gets its {@link Computer} in case we have no static executors and
- * we need to run a {@link FlyweightTask} - see JENKINS-7291 for more discussion.)
+ * we need to run a {@link Queue.FlyweightTask} - see JENKINS-7291 for more discussion.)
  *
  * Also, even if you remove a {@link Node}, it takes time for the corresponding
  * {@link Computer} to be removed, if some builds are already in progress on that
@@ -160,7 +164,7 @@ import org.kohsuke.stapler.verb.POST;
  * @author Kohsuke Kawaguchi
  */
 @ExportedBean
-public /*transient*/ abstract class Computer extends Actionable implements AccessControlled, ExecutorListener, DescriptorByNameOwner, StaplerProxy {
+public /*transient*/ abstract class Computer extends Actionable implements AccessControlled, IComputer, ExecutorListener, DescriptorByNameOwner, StaplerProxy, HasWidgets {
 
     private final CopyOnWriteArrayList<Executor> executors = new CopyOnWriteArrayList<>();
     // TODO:
@@ -223,7 +227,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * @since 1.607
      */
     public void recordTermination() {
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         if (request != null) {
             terminatedBy.add(new TerminationRequest(
                     String.format("Termination requested at %s by %s [id=%d] from HTTP request for %s",
@@ -347,12 +351,6 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return new AnnotatedLargeText<>(getLogFile(), Charset.defaultCharset(), false, this);
     }
 
-    @NonNull
-    @Override
-    public ACL getACL() {
-        return Jenkins.get().getAuthorizationStrategy().getACL(this);
-    }
-
     /**
      * If the computer was offline (either temporarily or not),
      * this method will return the cause.
@@ -365,14 +363,13 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return offlineCause;
     }
 
-    /**
-     * If the computer was offline (either temporarily or not),
-     * this method will return the cause as a string (without user info).
-     *
-     * @return
-     *      empty string if the system was put offline without given a cause.
-     */
+    @Override
+    public boolean hasOfflineCause() {
+        return offlineCause != null;
+    }
+
     @Exported
+    @Override
     public String getOfflineCauseReason() {
         if (offlineCause == null) {
             return "";
@@ -412,7 +409,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     /**
      * If {@link #getChannel()}==null, attempts to relaunch the agent.
      */
-    public abstract void doLaunchSlaveAgent(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException;
+    public abstract void doLaunchSlaveAgent(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException;
 
     /**
      * @deprecated since 2009-01-06.  Use {@link #connect(boolean)}
@@ -423,7 +420,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     }
 
     /**
-     * Do the same as {@link #doLaunchSlaveAgent(StaplerRequest, StaplerResponse)}
+     * Do the same as {@link #doLaunchSlaveAgent(StaplerRequest2, StaplerResponse2)}
      * but outside the context of serving a request.
      *
      * <p>
@@ -577,9 +574,6 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return numExecutors;
     }
 
-    /**
-     * Returns {@link Node#getNodeName() the name of the node}.
-     */
     public @NonNull String getName() {
         return nodeName != null ? nodeName : "";
     }
@@ -617,11 +611,14 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return LabelAtom.get(nodeName != null ? nodeName : Jenkins.get().getSelfLabel().toString()).loadStatistics;
     }
 
+    @Deprecated
+    @Restricted(DoNotUse.class)
     public BuildTimelineWidget getTimeline() {
         return new BuildTimelineWidget(getBuilds());
     }
 
     @Exported
+    @Override
     public boolean isOffline() {
         return temporarilyOffline || getChannel() == null;
     }
@@ -639,12 +636,6 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return getRetentionStrategy().isManualLaunchAllowed(this);
     }
 
-
-    /**
-     * Is a {@link #connect(boolean)} operation in progress?
-     */
-    public abstract boolean isConnecting();
-
     /**
      * Returns true if this computer is supposed to be launched via inbound protocol.
      * @deprecated since 2008-05-18.
@@ -656,14 +647,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return false;
     }
 
-    /**
-     * Returns true if this computer can be launched by Hudson proactively and automatically.
-     *
-     * <p>
-     * For example, inbound agents return {@code false} from this, because the launch process
-     * needs to be initiated from the agent side.
-     */
     @Exported
+    @Override
     public boolean isLaunchSupported() {
         return true;
     }
@@ -721,40 +706,30 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         }
     }
 
-    /**
-     * Returns the icon for this computer.
-     *
-     * It is both the recommended and default implementation to serve different icons based on {@link #isOffline}
-     *
-     * @see #getIconClassName()
-     */
     @Exported
+    @Override
     public String getIcon() {
         // The machine was taken offline by someone
         if (isTemporarilyOffline() && getOfflineCause() instanceof OfflineCause.UserCause) return "symbol-computer-disconnected";
-        // There is a "technical" reason the computer will not accept new builds
-        if (isOffline() || !isAcceptingTasks()) return "symbol-computer-offline";
+        // The computer is not accepting tasks, e.g. because the availability demands it being offline.
+        if (!isAcceptingTasks()) {
+            return "symbol-computer-not-accepting";
+        }
+        // The computer is not connected or it is temporarily offline due to a node monitor
+        if (isOffline()) return "symbol-computer-offline";
         return "symbol-computer";
     }
 
     /**
-     * Returns the class name that will be used to lookup the icon.
+     * {@inheritDoc}
      *
-     * This class name will be added as a class tag to the html img tags where the icon should
-     * show up followed by a size specifier given by {@link Icon#toNormalizedIconSizeClass(String)}
-     * The conversion of class tag to src tag is registered through {@link IconSet#addIcon(Icon)}
-     *
-     * It is both the recommended and default implementation to serve different icons based on {@link #isOffline}
-     *
-     * @see #getIcon()
+     * <p>
+     * It is both the recommended and default implementation to serve different icons based on {@link #isOffline}.
      */
     @Exported
+    @Override
     public String getIconClassName() {
-        // The machine was taken offline by someone
-        if (isTemporarilyOffline() && getOfflineCause() instanceof OfflineCause.UserCause) return "symbol-computer-disconnected";
-        // There is a "technical" reason the computer will not accept new builds
-        if (isOffline() || !isAcceptingTasks()) return "symbol-computer-offline";
-        return "symbol-computer";
+        return IComputer.super.getIconClassName();
     }
 
     public String getIconAltText() {
@@ -774,6 +749,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return Messages.Computer_Caption(nodeName);
     }
 
+    @Override
+    @NonNull
     public String getUrl() {
         return "computer/" + Util.fullEncode(getName()) + "/";
     }
@@ -941,19 +918,18 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return n;
     }
 
-    /**
-     * Returns the number of {@link Executor}s that are doing some work right now.
-     */
+    @Override
     public final int countBusy() {
         return countExecutors() - countIdle();
     }
 
     /**
-     * Returns the current size of the executor pool for this computer.
+     * {@inheritDoc}
      * This number may temporarily differ from {@link #getNumExecutors()} if there
      * are busy tasks when the configured size is decreased.  OneOffExecutors are
      * not included in this count.
      */
+    @Override
     public final int countExecutors() {
         return executors.size();
     }
@@ -990,14 +966,14 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     }
 
     /**
-     * Used to render the list of executors.
-     * @return a snapshot of the executor display information
+     * {@inheritDoc}
      * @since 1.607
      */
-    @Restricted(NoExternalUse.class)
-    public List<DisplayExecutor> getDisplayExecutors() {
+    @Override
+    @NonNull
+    public List<IDisplayExecutor> getDisplayExecutors() {
         // The size may change while we are populating, but let's start with a reasonable guess to minimize resizing
-        List<DisplayExecutor> result = new ArrayList<>(executors.size() + oneOffExecutors.size());
+        List<IDisplayExecutor> result = new ArrayList<>(executors.size() + oneOffExecutors.size());
         int index = 0;
         for (Executor e : executors) {
             if (e.isDisplayCell()) {
@@ -1096,6 +1072,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
                     if (ciBase != null) { // TODO confirm safe to assume non-null and use getInstance()
                         ciBase.removeComputer(Computer.this);
                     }
+                } else if (isIdle()) {
+                    threadPoolForRemoting.submit(() -> Listeners.notify(ComputerListener.class, false, l -> l.onIdle(this)));
                 }
             }
         };
@@ -1152,6 +1130,17 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         if (hasPermission(CONNECT)) {
             for (NodeMonitor monitor : NodeMonitor.getAll())
                 r.put(monitor.getClass().getName(), monitor.data(this));
+        }
+        return r;
+    }
+
+    @Restricted(NoExternalUse.class)
+    public Map<NodeMonitor, Object> getMonitoringData() {
+        Map<NodeMonitor, Object> r = new LinkedHashMap<>();
+        for (NodeMonitor monitor : NodeMonitor.getAll()) {
+            if (monitor.getColumnCaption() != null) {
+                r.put(monitor, monitor.data(this));
+            }
         }
         return r;
     }
@@ -1364,7 +1353,9 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
                 Executors.newCachedThreadPool(
                     new ExceptionCatchingThreadFactory(
                         new NamingThreadFactory(
-                            new DaemonThreadFactory(), "Computer.threadPoolForRemoting")))), ACL.SYSTEM2));
+                            new ClassLoaderSanityThreadFactory(new DaemonThreadFactory()),
+                            "Computer.threadPoolForRemoting")))),
+            ACL.SYSTEM2));
 
 //
 //
@@ -1372,12 +1363,12 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
 //
 //
     @Restricted(DoNotUse.class)
-    public void doRssAll(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public void doRssAll(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         RSS.rss(req, rsp, "Jenkins:" + getDisplayName() + " (all builds)", getUrl(), getBuilds());
     }
 
     @Restricted(DoNotUse.class)
-    public void doRssFailed(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public void doRssFailed(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         RSS.rss(req, rsp, "Jenkins:" + getDisplayName() + " (failed builds)", getUrl(), getBuilds().failureOnly());
     }
 
@@ -1388,7 +1379,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * @since 2.215
      */
     @Restricted(DoNotUse.class)
-    public void doRssLatest(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public void doRssLatest(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         final List<Run> lastBuilds = new ArrayList<>();
         for (AbstractProject<?, ?> p : Jenkins.get().allItems(AbstractProject.class)) {
             if (p.getLastBuild() != null) {
@@ -1433,12 +1424,12 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     /**
      * Dumps the contents of the export table.
      */
-    public void doDumpExportTable(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException, InterruptedException {
+    public void doDumpExportTable(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException, InterruptedException {
         // this is a debug probe and may expose sensitive information
         checkPermission(Jenkins.ADMINISTER);
 
         rsp.setContentType("text/plain");
-        try (PrintWriter w = new PrintWriter(rsp.getCompressedWriter(req))) {
+        try (PrintWriter w = new PrintWriter(rsp.getWriter())) {
             VirtualChannel vc = getChannel();
             if (vc instanceof Channel) {
                 w.println("Controller to agent");
@@ -1469,18 +1460,18 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * For system diagnostics.
      * Run arbitrary Groovy script.
      */
-    public void doScript(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public void doScript(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         _doScript(req, rsp, "_script.jelly");
     }
 
     /**
      * Run arbitrary Groovy script and return result as plain text.
      */
-    public void doScriptText(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public void doScriptText(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         _doScript(req, rsp, "_scriptText.jelly");
     }
 
-    protected void _doScript(StaplerRequest req, StaplerResponse rsp, String view) throws IOException, ServletException {
+    protected void _doScript(StaplerRequest2 req, StaplerResponse2 rsp, String view) throws IOException, ServletException {
         Jenkins._doScript(req, rsp, req.getView(this, view), getChannel(), getACL());
     }
 
@@ -1488,7 +1479,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Accepts the update to the node configuration.
      */
     @POST
-    public void doConfigSubmit(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException, FormException {
+    public void doConfigSubmit(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException, FormException {
         checkPermission(CONFIGURE);
 
         String proposedName = Util.fixEmptyAndTrim(req.getSubmittedForm().getString("name"));
@@ -1505,12 +1496,20 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         }
 
         String nExecutors = req.getSubmittedForm().getString("numExecutors");
-        if (StringUtils.isBlank(nExecutors) || Integer.parseInt(nExecutors) <= 0) {
+        if (nExecutors == null || nExecutors.isBlank() || Integer.parseInt(nExecutors) <= 0) {
             throw new FormException(Messages.Slave_InvalidConfig_Executors(nodeName), "numExecutors");
         }
 
         Node result = node.reconfigure(req, req.getSubmittedForm());
         Jenkins.get().getNodesObject().replaceNode(this.getNode(), result);
+
+        if (result.getNodeProperty(DiskSpaceMonitorNodeProperty.class) != null) {
+            for (NodeMonitor monitor : NodeMonitor.getAll()) {
+                if (monitor instanceof AbstractDiskSpaceMonitor) {
+                    monitor.data(this);
+                }
+            }
+        }
 
         // take the user back to the agent top page.
         rsp.sendRedirect2("../" + result.getNodeName() + '/');
@@ -1520,7 +1519,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Accepts {@code config.xml} submission, as well as serve it.
      */
     @WebMethod(name = "config.xml")
-    public void doConfigDotXml(StaplerRequest req, StaplerResponse rsp)
+    public void doConfigDotXml(StaplerRequest2 req, StaplerResponse2 rsp)
             throws IOException, ServletException {
 
         if (req.getMethod().equals("GET")) {
@@ -1599,7 +1598,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     /**
      * Handles incremental log.
      */
-    public void doProgressiveLog(StaplerRequest req, StaplerResponse rsp) throws IOException {
+    public void doProgressiveLog(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException {
         getLogText().doProgressText(req, rsp);
     }
 
@@ -1630,15 +1629,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return e != null ? e.getOwner() : null;
     }
 
-    /**
-     * Returns {@code true} if the computer is accepting tasks. Needed to allow agents programmatic suspension of task
-     * scheduling that does not overlap with being offline.
-     *
-     * @return {@code true} if the computer is accepting tasks
-     * @see hudson.slaves.RetentionStrategy#isAcceptingTasks(Computer)
-     * @see hudson.model.Node#isAcceptingTasks()
-     */
     @OverrideMustInvoke
+    @Override
     public boolean isAcceptingTasks() {
         final Node node = getNode();
         return getRetentionStrategy().isAcceptingTasks(this) && (node == null || node.isAcceptingTasks());
@@ -1698,79 +1690,12 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         }
     }
 
-    /**
-     * A value class to provide a consistent snapshot view of the state of an executor to avoid race conditions
-     * during rendering of the executors list.
-     *
-     * @since 1.607
-     */
-    @Restricted(NoExternalUse.class)
-    public static class DisplayExecutor implements ModelObject {
-
-        @NonNull
-        private final String displayName;
-        @NonNull
-        private final String url;
-        @NonNull
-        private final Executor executor;
-
-        public DisplayExecutor(@NonNull String displayName, @NonNull String url, @NonNull Executor executor) {
-            this.displayName = displayName;
-            this.url = url;
-            this.executor = executor;
-        }
-
+    @Extension(ordinal = Double.MAX_VALUE)
+    @Restricted(DoNotUse.class)
+    public static class InternalComputerListener extends ComputerListener {
         @Override
-        @NonNull
-        public String getDisplayName() {
-            return displayName;
-        }
-
-        @NonNull
-        public String getUrl() {
-            return url;
-        }
-
-        @NonNull
-        public Executor getExecutor() {
-            return executor;
-        }
-
-        @Override
-        public String toString() {
-            String sb = "DisplayExecutor{" + "displayName='" + displayName + '\'' +
-                    ", url='" + url + '\'' +
-                    ", executor=" + executor +
-                    '}';
-            return sb;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (o == null || getClass() != o.getClass()) {
-                return false;
-            }
-
-            DisplayExecutor that = (DisplayExecutor) o;
-
-            return executor.equals(that.executor);
-        }
-
-        @Extension(ordinal = Double.MAX_VALUE)
-        @Restricted(DoNotUse.class)
-        public static class InternalComputerListener extends ComputerListener {
-            @Override
-            public void onOnline(Computer c, TaskListener listener) throws IOException, InterruptedException {
-                c.cachedEnvironment = null;
-            }
-        }
-
-        @Override
-        public int hashCode() {
-            return executor.hashCode();
+        public void onOnline(Computer c, TaskListener listener) throws IOException, InterruptedException {
+            c.cachedEnvironment = null;
         }
     }
 
