@@ -1,11 +1,11 @@
 package jenkins.security;
 
+import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assume.assumeFalse;
 
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import hudson.ExtensionList;
 import hudson.FilePath;
@@ -14,11 +14,15 @@ import hudson.model.DirectoryBrowserSupport;
 import hudson.model.FreeStyleProject;
 import hudson.model.Item;
 import hudson.model.UnprotectedRootAction;
+import java.net.URI;
 import java.net.URL;
 import java.time.Instant;
 import java.util.UUID;
 import jenkins.model.Jenkins;
 import jenkins.model.JenkinsLocationConfiguration;
+import org.htmlunit.FailingHttpStatusCodeException;
+import org.htmlunit.Page;
+import org.htmlunit.html.HtmlPage;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
@@ -352,13 +356,13 @@ public class ResourceDomainTest {
         URL url = page.getUrl();
         Assert.assertTrue("page is served by resource domain", url.toString().contains("/static-files/"));
 
-        URL dirUrl = new URL(url.toString().replace("%20100%25%20evil%20content%20.html", ""));
+        URL dirUrl = new URI(url.toString().replace("%20100%25%20evil%20content%20.html", "")).toURL();
         Page dirPage = webClient.getPage(dirUrl);
         Assert.assertEquals("page is found", 200, dirPage.getWebResponse().getStatusCode());
         Assert.assertTrue("page content is HTML", dirPage.getWebResponse().getContentAsString().contains("href"));
         Assert.assertTrue("page content references file", dirPage.getWebResponse().getContentAsString().contains("evil content"));
 
-        URL topDirUrl = new URL(url.toString().replace("%20100%25%20evil%20dir%20name%20%20%20/%20100%25%20evil%20content%20.html", ""));
+        URL topDirUrl = new URI(url.toString().replace("%20100%25%20evil%20dir%20name%20%20%20/%20100%25%20evil%20content%20.html", "")).toURL();
         Page topDirPage = webClient.getPage(topDirUrl);
         Assert.assertEquals("page is found", 200, topDirPage.getWebResponse().getStatusCode());
         Assert.assertTrue("page content is HTML", topDirPage.getWebResponse().getContentAsString().contains("href"));
@@ -391,6 +395,34 @@ public class ResourceDomainTest {
             FilePath tempDir = jenkins.getRootPath().createTempDir("root", "tmp");
             tempDir.child(" 100% evil dir name   ").child(" 100% evil content .html").write("this is the content", "UTF-8");
             return new DirectoryBrowserSupport(jenkins, tempDir, "title", "", true);
+        }
+    }
+
+    @Test
+    public void authenticatedCannotAccessResourceDomainUnlessAllowedBySystemProperty() throws Exception {
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        final MockAuthorizationStrategy authorizationStrategy = new MockAuthorizationStrategy();
+        authorizationStrategy.grant(Jenkins.ADMINISTER).everywhere().to("admin").grant(Jenkins.READ).everywhere().toEveryone();
+        j.jenkins.setAuthorizationStrategy(authorizationStrategy);
+        final String resourceUrl;
+        try (JenkinsRule.WebClient wc = j.createWebClient().withRedirectEnabled(false).withThrowExceptionOnFailingStatusCode(false)) {
+            final Page htmlPage = wc.goTo("userContent/readme.txt", "");
+            resourceUrl = htmlPage.getWebResponse().getResponseHeaderValue("Location");
+        }
+        assertThat(resourceUrl, containsString("static-files/"));
+        try (JenkinsRule.WebClient wc = j.createWebClient().withBasicApiToken("admin")) {
+            assertThat(assertThrows(FailingHttpStatusCodeException.class, () -> wc.getPage(new URL(resourceUrl))).getStatusCode(), is(400));
+        }
+        try (JenkinsRule.WebClient wc = j.createWebClient().withBasicCredentials("admin")) {
+            assertThat(assertThrows(FailingHttpStatusCodeException.class, () -> wc.getPage(new URL(resourceUrl))).getStatusCode(), is(400));
+        }
+
+        ResourceDomainRootAction.ALLOW_AUTHENTICATED_USER = true;
+        try (JenkinsRule.WebClient wc = j.createWebClient().withBasicApiToken("admin")) {
+            assertThat(wc.getPage(new URL(resourceUrl)).getWebResponse().getStatusCode(), is(200));
+        }
+        try (JenkinsRule.WebClient wc = j.createWebClient().withBasicCredentials("admin")) {
+            assertThat(wc.getPage(new URL(resourceUrl)).getWebResponse().getStatusCode(), is(200));
         }
     }
 }
